--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,14 +4,14 @@ html
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    meta(name='description', content='Un simulatore di Blockchain che funziona nel tuo Browser.')
-    meta(name='author', content='Ferruccio Balestreri')
+    meta(name='description', content='A live blockchain demo in a browser.')
+    meta(name='author', content='Anders Brownworth')
     link(rel='icon', href='/favicon.ico')
 
     title Simulatore di Blockchain - CryptoTrend
 
     link(rel='stylesheet', href='/stylesheets/lib/bootstrap.min.css')
-    link(rel='stylesheet', href='/stylesheets/lib/bootstrap-theme.min.css')
+    link(rel='stylesheet', href='/stylesheets/lib/flat-ui.min.css')
     link(rel='stylesheet', href='/stylesheets/lib/bootstrap-horizon.css')
     link(rel='stylesheet', href='/stylesheets/lib/ladda-themeless.min.css')
     link(rel='stylesheet', href='/stylesheets/lib/ie10-viewport-bug-workaround.css')
