--- a/views/blockchain.jade
+++ b/views/blockchain.jade
@@ -15,6 +15,8 @@ block content
         .col-xs-7
           include includes/block.jade
 
+    a(href='./distributed') Prossima Sezione
+
   script.
     $(function() {
       setup(1, 1);
