--- a/views/distributed.jade
+++ b/views/distributed.jade
@@ -17,7 +17,8 @@ block content
         each block in blocks
           .col-xs-7
             include includes/block.jade
-
+  
+  a(href='./tokens') Prossima Sezione
   script.
     $(function() {
       setup(1, 1);
