--- a/views/index.jade
+++ b/views/index.jade
@@ -4,8 +4,8 @@ block content
   .container
     h1 Simulatore di Blockchain
     p Hai appena finito di leggere i nostri articoli introduttivi, ma non hai ancora le idee chiare su come funziona una cryptovaluta? Su questo sito creeremo in 10 minuti, prima la tua Blockchain e successivamente una cryptovaluta. Avrai modo di consolidare le tue conoscenze mettendo le mani su queste tecnologie rivoluzionarie. 
-     blank Clicca
-     a(href='/block') qui per cominciare
+     blank Clicca 
+     a(href='/hash') qui per cominciare
     br
     p.pull-right Made with 💚 by 
       a(href='http://cryptotrend.it/') CryptoTrend.it 
