--- a/views/hash.jade
+++ b/views/hash.jade
@@ -29,7 +29,8 @@ block content
     p Un algoritmo di hashing idealmente è un algoritmo che dato dell'input genera una chiave sempre uguale. E dati input diversi non genera mai la stessa chiave. 
     p Quando due input diversi generano una stessa chiave abbiamo una collisione. Un buon algoritmo di hashing idealmente non genera collisioni.
 
-    p Tutto qui, ora passa alla prossima sezione.
+    p Ora passiamo ai 
+    a(href='./block') Blocchi
 
   script.
     function getText(block, chain) {
