--- a/views/block.jade
+++ b/views/block.jade
@@ -44,7 +44,9 @@ block content
    p Quando scrivi qualcosa nei dati noti che il blocco diventa rosso. Questo perchè se guardi l'hash i primi quattro caratteri non sono "0000". 
    p Quando schiacci "Mina" con i nuovi dati inseriti però dopo un po' di tempo noti che il Nonce cambia e l'hash pure, il blocco è verde perchè l'hash comincia con "0000".
    p In parole povere quello che succede "minando" è che tanti numeri diversi sono provati come nonce e inseriti nell'input con il numero del blocco e i dati contenuti. Quando riusciamo a generare una chiave che comincia con quattro zeri siamo contenti e teniamo quel Nonce.
-   a(href='./blockchain') Prossima Sezione
+   
+   p.pull-right
+    a(href='./blockchain') Prossima Sezione
    
    script.
 
