--- a/views/blockchain.jade
+++ b/views/blockchain.jade
@@ -15,7 +15,8 @@ block content
         .col-xs-7
           include includes/block.jade
 
-    a(href='./distributed') Prossima Sezione
+    p.pull-right
+     a(href='./distributed') Prossima Sezione
 
   script.
     $(function() {
