--- a/views/distributed.jade
+++ b/views/distributed.jade
@@ -18,7 +18,8 @@ block content
           .col-xs-7
             include includes/block.jade
   
-  a(href='./tokens') Prossima Sezione
+  p.pull-right
+   a(href='./tokens') Prossima Sezione
   script.
     $(function() {
       setup(1, 1);
