--- a/views/hash.jade
+++ b/views/hash.jade
@@ -29,8 +29,8 @@ block content
     p Un algoritmo di hashing idealmente è un algoritmo che dato dell'input genera una chiave sempre uguale. E dati input diversi non genera mai la stessa chiave. 
     p Quando due input diversi generano una stessa chiave abbiamo una collisione. Un buon algoritmo di hashing idealmente non genera collisioni.
 
-    p Ora passiamo ai 
-    a(href='./block') Blocchi
+    p.pull-right
+     a(href='./block') Prossima Sezione
 
   script.
     function getText(block, chain) {
