--- a/views/tokens.jade
+++ b/views/tokens.jade
@@ -20,7 +20,8 @@ block content
         each block in blocks
           .col-xs-7
             include includes/tokenblock.jade
-    a(href='./coinbase') Prossima Sezione
+    p.pull-right
+     a(href='./coinbase') Prossima Sezione
   script.
     $(function() {
       setup(1, 1);
