--- a/views/layout.jade
+++ b/views/layout.jade
@@ -40,15 +40,21 @@ html
           ul.nav.navbar-nav.navbar-right
             li(class={active: page === 'hash'})
               a(href='/hash') #{__('Hash')}
+              span.navbar-new 1
             li(class={active: page === 'block'})
               a(href='/block') #{__('Block')}
+              span.navbar-new 2
             li(class={active: page === 'blockchain'})
               a(href='/blockchain') #{__('Blockchain')}
+              span.navbar-new 3
             li(class={active: page === 'distributed'})
               a(href='/distributed') #{__('Distributed')}
+              span.navbar-new 4
             li(class={active: page === 'tokens'})
               a(href='/tokens') #{__('Tokens')}
+              span.navbar-new 5
             li(class={active: page === 'coinbase'})
               a(href='/coinbase') #{__('Coinbase')}
+              span.navbar-new 6
 
     block content
