--- a/views/error.jade
+++ b/views/error.jade
@@ -1,6 +1,9 @@
 extends layout
 
 block content
-  .container
-    h1 Error
-    p=error
+  div.wrapper
+   div.main.main-raised
+    .section.section-basic
+     .container
+      h1 Error
+      p=error
