--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,7 @@ html
     title Simulatore di Blockchain - CryptoTrend
 
     link(rel='stylesheet', href='/stylesheets/lib/bootstrap.min.css')
-    link(rel='stylesheet', href='/stylesheets/lib/flat-ui.min.css')
+    link(rel='stylesheet', href='/stylesheets/lib/material-kit.css')
     link(rel='stylesheet', href='/stylesheets/lib/bootstrap-horizon.css')
     link(rel='stylesheet', href='/stylesheets/lib/ladda-themeless.min.css')
     link(rel='stylesheet', href='/stylesheets/lib/ie10-viewport-bug-workaround.css')
@@ -19,6 +19,8 @@ html
 
     script(src='/javascripts/lib/jquery.min.js')
     script(src='/javascripts/lib/bootstrap.min.js')
+    script(src='/javascripts/lib/material.min.js')
+    script(src='/javascripts/lib/nouislider.min.js')
     script(src='/javascripts/lib/spin.min.js')
     script(src='/javascripts/lib/ladda.min.js')
     script(src='/javascripts/lib/ie10-viewport-bug-workaround.js')
@@ -26,7 +28,7 @@ html
     script(src='/javascripts/blockchain.js')
 
   body
-    nav.navbar.navbar-inverse.navbar-fixed-top
+    nav.navbar.navbar-success.navbar-fixed-top
       .container
         .navbar-header
           button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar', aria-expanded='false', aria-controls='navbar')
