--- a/views/hash.jade
+++ b/views/hash.jade
@@ -1,13 +1,16 @@
 extends layout
 
 block content
-  .container
+  div.wrapper
+   div.main.main-raised
+    .section.section-basic
+     .container
 
-    h1 SHA256 #{__('Hash')}
-    p Prova ad inserire del testo qui sotto per vedere cosa succede: 
+      h1 SHA256 #{__('Hash')}
+      p Prova ad inserire del testo qui sotto per vedere cosa succede: 
 
-    .well#well1
-      form.form-horizontal
+      .well#well1
+       form.form-horizontal
 
         .form-group
           label.col-sm-2.control-label(for='data') #{__('Data')}:
@@ -19,19 +22,21 @@ block content
           .col-sm-10
             input#hash.form-control(type='text', disabled)
 
-    p Man mano che inserisci del testo il codice che vedi sotto cambia giusto? 
+      p Man mano che inserisci del testo il codice che vedi sotto cambia giusto? 
 
-    p Quel che succede è che generiamo un'impronta unica di alcuni dati. Per ogni cosa che scriviamo viene generata una chiave unica per identificare quel che abbiamo scritto. 
+      p Quel che succede è che generiamo un'impronta unica di alcuni dati. Per ogni cosa che scriviamo viene generata una chiave unica per identificare quel che abbiamo scritto. 
 
-    p Solo scrivendo lo stesso testo riusciamo a generare la stessa chiave.
+      p Solo scrivendo lo stesso testo riusciamo a generare la stessa chiave.
 
-    h2 Cos'è quindi un algoritmo di hashing?
-    p Un algoritmo di hashing idealmente è un algoritmo che dato dell'input genera una chiave sempre uguale. E dati input diversi non genera mai la stessa chiave. 
-    p Quando due input diversi generano una stessa chiave abbiamo una collisione. Un buon algoritmo di hashing idealmente non genera collisioni.
+      h2 Cos'è quindi un algoritmo di hashing?
+      p Un algoritmo di hashing idealmente è un algoritmo che dato dell'input genera una chiave sempre uguale. E dati input diversi non genera mai la stessa chiave. 
+      p Quando due input diversi generano una stessa chiave abbiamo una collisione. Un buon algoritmo di hashing idealmente non genera collisioni.
 
-    p.pull-right
-     a(href='./block') Prossima Sezione
-
+  .footer.container
+    .copyright
+     p.pull-right
+      a(href='./block') Prossima Sezione
+  br
   script.
     function getText(block, chain) {
       return $('#data').val();
