--- a/views/hash.jade
+++ b/views/hash.jade
@@ -15,7 +15,7 @@ block content
         .form-group
           label.col-sm-2.control-label(for='data') #{__('Data')}:
           .col-sm-10
-            textarea#data.form-control(rows='10', onkeyup='$("#hash").val(sha256())')
+            textarea#data.form-control(rows='10', onkeyup='$("#hash").val(sha256())', placeholder='Scrivi qualcosa..')
 
         .form-group
           label.col-sm-2.control-label(for='hash') #{__('Hash')}:
