--- a/views/index.jade
+++ b/views/index.jade
@@ -11,9 +11,9 @@ block content
      div.container
        h2 Introduzione:
        p Hai appena finito di leggere i nostri articoli introduttivi, ma non hai ancora le idee chiare su come funziona una cryptovaluta? Su questo sito creeremo in 10 minuti, prima la tua Blockchain e successivamente una cryptovaluta. Avrai modo di consolidare le tue conoscenze mettendo le mani su queste tecnologie rivoluzionarie. 
-       blank Clicca 
-       a(href='/hash') qui per cominciare
-       br
+       a(href='/hash')
+        button.btn.btn-primary.next-button(data-style='expand-right')
+         span.ladda-label Comincia Subito!
    
    br
    br
