--- a/views/layout.jade
+++ b/views/layout.jade
@@ -36,7 +36,7 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='http://cryptotrend.it') 
+          a.navbar-brand(href='../') 
            img.brand(src='/images/ct-logo.png')
         #navbar.collapse.navbar-collapse
           ul.nav.navbar-nav.navbar-right
