--- a/views/coinbase.jade
+++ b/views/coinbase.jade
@@ -10,7 +10,7 @@ block content
       b Ecco quindi che abbiamo creato una nostra cryptovaluta su una Blockchain decentralizzata. 
       br
       br
-      a(href='https://cryptotrend.it/introduzione/') Per Continuare ad imparare torna alla nostro sito!
+      a(href='https://cryptotrend.it/introduzione/') Per Continuare ad imparare torna sul nostro sito!
       - var peers = {1: 'A', 2: 'B', 3: 'C'}
       - each peer, chain in peers
        h3 #{__('Peer')} #{peer}
