--- a/views/blockchain.jade
+++ b/views/blockchain.jade
@@ -13,7 +13,7 @@ block content
       p Per incatenare dei blocchi viene aggiunto un quarto dato: la chiave del Blocco precedente. 
       p Questo dato viene aggiunto perchè se proviamo a cambiare i dati su un blocco, il suo hash cambia. E i blocchi seguenti sono invalidati, perchè l'hash del loro blocco precedente cambia. In questo modo possiamo garantire che ogni volta che qualcosa viene aggiunto alla blockchain il valore degli elementi precendenti non può essere cambiato senza invalidare i blocchi successivi.
       p Abbiamo quindi un perfetto 
-       a(href="https://cryptotrend.it/2017/10/23/cosa-sono-i-bitcoin/") Libro Mastro mercantile!
+       a(href="https://cryptotrend.it/cosa-sono-i-bitcoin/") Libro Mastro mercantile!
 
       .row.row-horizon
        - var blocks = []
