Better background color
looks better

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,6 +19,5 @@ block content
    br
    .footer.container
     .copyright
-     p.pull-right Made with 💚 by 
-      a(href='http://cryptotrend.it/') CryptoTrend.it 
-      
+     p.pull-right Made with ❤ by  
+      a(href='http://cryptotrend.it/') CryptoTrend
