--- a/public/stylesheets/blockchain.css
+++ b/public/stylesheets/blockchain.css
@@ -7,6 +7,7 @@ html {
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   height: 100%;
+  background-color: #E9EEF3;
 }
 
 body > .container {
