--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block content
     .section.section-basic
      .container
        .row
-        .col-md-6.col-md-offset-3
+        .col-md-6
          h1 Lezione di Blockchain
      div.container
        h2 Introduzione:
